ingress/ingress-kellenschmidtcom.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kellenschmidtcom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: angular
          servicePort: 80
  - host: test.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-angular
          servicePort: 80
  - host: dqc.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: dqc-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: dqc-api
          servicePort: 80
  - host: api.kellenschmidt.com
    http:
      paths:
      - path: /v1
        backend:
          serviceName: slim
          servicePort: 80
      - path: /v2
        backend:
          serviceName: express
          servicePort: 80
  - host: test.api.kellenschmidt.com
    http:
      paths:
      - path: /v1
        backend:
          serviceName: test-slim
          servicePort: 80
      - path: /v2
        backend:
          serviceName: test-express
          servicePort: 80
  - host: pma.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80
  - host: dashboard.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
