ingress/kellenforthewin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kellenforthewin
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - kellenforthe.win
    - pma.kellenforthe.win
    secretName: kellenforthewin-certificate
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kellenforthe.win
    http:
      paths:
      - path: /
        backend:
          serviceName: interactive-resume-and-url-shortener
          servicePort: 80
      - path: /api/v1
        backend:
          serviceName: slimphp-api
          servicePort: 80
      - path: /api/v2
        backend:
          serviceName: graphql-express-api
          servicePort: 80
      - path: /data-quality-checker
        backend:
          serviceName: data-quality-checker
          servicePort: 80
      - path: /data-quality-checker/api
        backend:
          serviceName: dqc-api
          servicePort: 80
      - path: /projects
        backend:
          serviceName: projects
          servicePort: 80
      - path: /analytics
        backend:
          serviceName: analytics-for-links-and-sites
          servicePort: 80
      - path: /laundry
        backend:
          serviceName: laundry-tracker
          servicePort: 80
      - path: /metabase
        backend:
          serviceName: metabase
          servicePort: 80
  - host: pma.kellenforthe.win
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80
