ingress/kellenschmidtcom-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kellenschmidtcom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - kellenschmidt.com
    - test.kellenschmidt.com
    - pma.kellenschmidt.com
    secretName: kellenschmidtcom-https
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: interactive-resume-and-url-shortener
          servicePort: 80
      - path: /api/v1
        backend:
          serviceName: slimphp-api
          servicePort: 80
      - path: /api/v2
        backend:
          serviceName: express
          servicePort: 80
      - path: /dqc
        backend:
          serviceName: data-quality-checker
          servicePort: 80
      - path: /dqc/api
        backend:
          serviceName: dqc-api
          servicePort: 80
      - path: /projects
        backend:
          serviceName: projects
          servicePort: 80
      - path: /analytics
        backend:
          serviceName: analytics
          servicePort: 80
  - host: test.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-angular
          servicePort: 80
      - path: /api/v1
        backend:
          serviceName: test-slim
          servicePort: 80
      - path: /api/v2
        backend:
          serviceName: test-express
          servicePort: 80
      - path: /projects
        backend:
          serviceName: test-projects
          servicePort: 80
      - path: /analytics
        backend:
          serviceName: test-analytics
          servicePort: 80
  - host: pma.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80
