ingress/kspw-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kspw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kspw
    http:
      paths:
      - path: /
        backend:
          serviceName: angular
          servicePort: 80
      - path: /api/v1
        backend:
          serviceName: slim
          servicePort: 80
      - path: /api/v2
        backend:
          serviceName: express
          servicePort: 80
      - path: /dqc
        backend:
          serviceName: dqc-web
          servicePort: 80
      - path: /dqc/api
        backend:
          serviceName: dqc-api
          servicePort: 80
      - path: /projects
        backend:
          serviceName: projects
          servicePort: 80
      - path: /analytics
        backend:
          serviceName: analytics
          servicePort: 80
  - host: pma.kspw
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80
